force-app/main/default/objects/Emergency_Plan__c/Emergency_Plan__c.object-meta.xml
<CustomObject>
    <description>Emergency response plans per project, capturing scenarios, key contacts, and drill schedules.</description>
    <label>Emergency Plan</label>
    <nameField>
        <displayFormat>EP-{00000}</displayFormat>
        <label>Plan Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Emergency Plans</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>