force-app/main/default/objects/Emergency_Plan__c/fields/Contacts__c.field-meta.xml
<CustomField>
    <fullName>Contacts__c</fullName>
    <label>Key Contacts</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>