force-app/main/default/objects/Emergency_Plan__c/fields/Drill_Date__c.field-meta.xml
<CustomField>
    <fullName>Drill_Date__c</fullName>
    <label>Last Drill Date</label>
    <type>Date</type>
</CustomField>