force-app/main/default/objects/Emergency_Plan__c/fields/Scenario__c.field-meta.xml
<CustomField>
    <fullName>Scenario__c</fullName>
    <label>Scenario</label>
    <length>200</length>
    <required>true</required>
    <type>Text</type>
</CustomField>